Fix compilation error on OSX 10.12.

chrome/browser/ui/cocoa/fullscreen/fullscreen_toolbar_mouse_tracker.mm
does not include the header for a class that it uses,
BrowserWindowController. This CL adds the missing include and fixes the
OSX 10.12 build error documented in the associated bug.

BUG=660292

Review-Url: https://codereview.chromium.org/2462433003
Cr-Commit-Position: refs/heads/master@{#428351}

Former-commit-id: 7fcceb13d277f6f7fd3bed8843de3bb8495faecd